assets/sass/utility/form.scss
/* Inputs
----------------------------------------------------------------------- */
.typerocket-container {
    input[type="text"],
    input[type="email"],
    input[type="password"],
    input[type="number"],
    textarea {
        box-sizing: border-box;
        width: 100%;
        padding: 6px;
        margin: 0;
    }

    select {
        margin: 0 0 5px;
        padding: 3px;
        box-sizing: border-box;
        width: 100%;
    }

    textarea {
        min-height: 120px;
    }

    .tr-form-field-help p {
        color: #666;
        font-style: italic;
        margin: 4px 0 0;
        font-size: 13px;
    }

    .control-section,
    .control-row,
    .control-group
    {
        padding: 10px;
        position: relative;
    }

    .control-section + .control-section,
    .tr-tabbed-top + .control-section,
    .tr-tabbed-top + .control-row,
    .control-section + .tr-tabbed-top,
    .control-row + .tr-tabbed-top,
    .control-section + .control-row,
    .control-row + .control-section,
    .control-row + .control-row {
        -webkit-box-shadow: inset 0 1px 0 0 #DFDFDF;
        -moz-box-shadow: inset 0 1px 0 0 #DFDFDF;
        box-shadow: inset 0 1px 0 0 #DFDFDF;
    }

    .tr-tabbed-box {
        .control-row, .control-section {
            box-shadow: none !important;
        }
    }

    .control-row {
        display: flex;

        .control-section {
            padding: 5px;
            flex: 1;
            box-sizing: border-box;
            padding: 0 5px;
            box-shadow: none !important;
            &:first-child { padding-left: 0 }
            &:last-child { padding-right: 0 }
        }
    }

    .control-label {
        color: #191e23;
        display: block;
        font-family: sans-serif;
        font-size: 12px;
        font-weight: bold;
        height: auto;
        width: auto;
        padding-left: 1px;
        padding-bottom: 4px;
        font-size: 12px;

        label {
            padding: 0;
        }
    }
}

/* Maxlength
----------------------------------------------------------------------- */
.tr-maxlength {
    margin-top: 3px;
    margin-bottom: 6px;
    color: #666;
    font-size: 12px;
    font-weight: normal;
    font-style: italic;
}

.tr-maxlength span {
    color: $blue;
    font-weight: bold;
}

/* Frames, Meta Boxes and Repeaters
----------------------------------------------------------------------- */
.tr-frame-fields,
.repeater-inputs,
.postbox-container .typerocket-container {
    .control-section + .tr-tabbed-top  {
        margin-top: 9px;
        padding-top: 0;

        &:after {
            padding: 0 10px;
            margin: 0px -5px;
        }
    }

    [class^=control-row] + .tr-tabbed-top  {
        margin-top: 9px;
        padding-top: 1px;

        &:after {
            padding: 0 10px;
            margin: 0px -5px;
        }
    }

    .tr-tabbed-top + .control-section {
        padding-top: 12px;

        &:after {
            margin: 0px -5px;
        }
    }

    .tr-tabbed-top + [class^=control-row] {
        padding-top: 9px;

        &:after {
            margin: 0px -5px;
        }
    }
}

